	mentions timeline instead of the replies timeline.
	(twittering-extract-timeline-spec): interpret the timeline spec
	string "@" as the mentions timeline instead of the replies
	timeline.

	* twittering-mode.el: Fix a typo that disables twittering-mode.el
	from retrieving the ":retweets_of_me" timeline.
	(twittering-call-api-with-account-in-api1.1): fix a typo.

2013-02-11  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el: Fix the jojo-mode that caused an error when
	the condition of automatically posting a tweet was satisfied.
	Thanks to the anonymous person who reported the problem.
	(twittering-post-predicted-message-like-jojo): fix variable name.

	* twittering-mode.el: Fix a return value of
	`twittering-render-replied-statuses'. The function returns nil
	without regard to whether a tweet is rendered or not. Thanks to
	Ikumi Keita who reported the problem.
	(twittering-render-replied-statuses): fix a return value.

	* twittering-mode.el: Support different intervals of retrieving
	timelines.
	(twittering-relative-retrieval-interval-alist): new variable.
	(twittering-relative-retrieval-count-alist): new variable.
	(twittering-retrieve-timeline): reset the retrieval count.
	(twittering-start): update all active timelines forcibly once.
	(twittering-get-relative-interval): new function.
	(twittering-get-retrieval-count): new function.
	(twittering-set-retrieval-count): new function.
	(twittering-initialize-retrieval-count): new function.
	(twittering-update-active-buffers): reduce retrievals according to
	the variable `twittering-relative-retrieval-interval-alist'.

2013-01-21  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el: Update the regexp for extracting an ID from
	a tweet.
	(twittering-extract-id-from-url): update the regexp for extracting
	an ID from a tweet.

	* twittering-mode.el: Avoid rendering same tweets repeatedly. The
	function `twittering-render-timeline' rendered given repeated